[project]
name = "csihu"
version = "3.4.8"
description = "A bot that is used for the CompSci Discord Server"
authors = [{ name = "atbuy", email = "buy@atbuy.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
  "python-urbandict==0.3.12",
  "discord.py==2.6.4",
  "beautifulsoup4==4.14.2",
  "lxml==6.0.2",
  "sqlalchemy[asyncio]==2.0.44",
  "asyncpg==0.30.0",
  "pydantic==2.12.4",
  "alembic==1.17.1",
  "cchardet==2.2.0a2",
  "selenium==4.38.0",
  "pydantic-settings==2.12.0",
  "prometheus-async==25.1.0",
  "aiohttp==3.13.2",
]

[project.optional-dependencies]
dev = ["pre-commit==4.4.0", "ruff==0.14.4"]

[project.urls]
"Homepage" = "https://github.com/atbuy/csihu-notificator"
"Bug Tracker" = "https://github.com/atbuy/csihu-notificator/issues"
"CI/CD" = "https://github.com/atbuy/csihu-notificator/actions"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
